chore(docs): fix typo

--- a/docs/repetitorium/part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/begriffe und elemente in klassendiagrammen.tex
+++ b/docs/repetitorium/part three/Klassendiagramme - Erweiterte Konzepte und Paketdiagramme/begriffe und elemente in klassendiagrammen.tex
@@ -36,7 +36,7 @@ Abstrakte Klassen können nicht instanziiert werden und können abstrakte Method
 Hat eine Klasse eine abstrakte Methode, ist diese automatisch abstrakt.\\
 Wird eine abstrakte Klasse abgeleitet, und die ableitende Klasse ist nicht abstrakt, müssen die abstrakten Methoden in der ableitenden Klasse implementiert werden.
 
-\subsection{Assoziationsklasse (Attributierte Assotiation)}
+\subsection{Assoziationsklasse (Attributierte Assoziation)}
 Eine \textbf{Assoziationsklasse} erlaubt das Hinzufügen von Operationen und Attributen zu einer Assoziation (\cite[43]{Buh09}).
 
 \blockquote[{\cite[277]{Oes05}}]{
