--- a/docs/repetitorium/part three/Einführung/sprachaufbau der uml 2.0.tex
+++ b/docs/repetitorium/part three/Einführung/sprachaufbau der uml 2.0.tex
@@ -103,6 +103,7 @@ Darüber hinaus werden die in der UML Superstructure erläuterten Modellierungsk
 \begin{figure}
     \centering
     \includegraphics[scale=0.4]{part three/Einführung/img/metamodel}
-    \caption{Beispiel für die verschiedenen Schichten der Metamodell Hierarchie. (Quelle: in Anlehnung an S. 20, Figure 7.8, \url{https://www.omg.org/spec/UML/2.4.1/Infrastructure/PDF}, abgerufen 01.05.2024}
+    \caption{Beispiel für die verschiedenen Schichten der Metamodell Hierarchie.
+    In der original Abbildung sind die Pfeilspitzen offen. (Quelle: in Anlehnung an S. 20, Figure 7.8, \url{https://www.omg.org/spec/UML/2.4.1/Infrastructure/PDF}, abgerufen 01.05.2024}
     \label{fig:metamodel}
 \end{figure}
