chore(docs): wording and structure updates

--- a/docs/repetitorium/part four/Management des QS-Prozesses/fortschrittsverfolgung.tex
+++ b/docs/repetitorium/part four/Management des QS-Prozesses/fortschrittsverfolgung.tex
@@ -5,11 +5,11 @@ Hierzu können aus der Testdokumentation ohne großen Aufwand \textbf{Kennzahlen
 \subsubsection*{Anzahl Fehlerberichte}
 Die Kennzahl \textbf{Anzahl der Fehlerberichte} kann nach dem Bearbeitungsstand und der Priorität aufgeschlüsselt werden.\\
 Die Kennzahl kann ohne weiteres täglich dem Bugtracking-Tool entnommen werden.\\
-Übersteigt bspw. über längere Zeit die Anzahl der neu gefundenen Defekte die Anzahl der behobenenen Defekte, ist das ein Hinweis darauf, dass die Entwickler mit der Behebung der Fehler nicht nachkommen.\\
+Übersteigt bspw. über längere Zeit die Anzahl der neu gefundenen Defekte die Anzahl der behobenen Defekte, ist das ein Hinweis darauf, dass die Entwickler mit der Behebung der Fehler nicht nachkommen.\\
 Handelt es sich dabei um Fehler sehr geringer Priorität, kann die Software aber auch eine sehr gute Qualität besitzen und die Entwickler arbeiten sehr detailliert bei der Analyse.
 
 \subsubsection*{Anzahl Testfälle}
 Eine weitere wichtige Kennzahl ist die \textbf{Anzahl der Testfälle} aufgeschlüsselt nach ihrem Bearbeitungsstand (\textit{offen}, \textit{in Bearbeitung}, \textit{abgeschlossen}).\\
 Diese Kennzahl lässt sich täglich aus den Testprotokollen ablesen.\\
-Stagniert diese Zahlen, ist das ein Hinweis auf Probleme im Tests.\\
-Steigt hingegen die Anzahl der Tests mit dem Status ``\textit{in Arbeit}`` eher stark an, ohne, dass sich die Anzahl der \textit{abgeschlossenen} Tests verändert, ist das ein Hinweis daraus, dass die Qualität der Software so niedrig ist, dann kein Testfall abgeschlossen werden kann.
+Stagniert diese Zahlen, ist das ein Hinweis auf Probleme im Test.\\
+Steigt hingegen die Anzahl der Tests mit dem Status ``\textit{in Arbeit}`` eher stark an, ohne, dass sich die Anzahl der \textit{abgeschlossenen} Tests verändert, ist das ein Hinweis daraus, dass die Qualität der Software so niedrig ist, dass kein Testfall abgeschlossen werden kann.
