--- a/docs/repetitorium/part four/Management des QS-Prozesses/testdokumentation.tex
+++ b/docs/repetitorium/part four/Management des QS-Prozesses/testdokumentation.tex
@@ -76,7 +76,7 @@ Hierzu werden die durchzuführenden Aktionen und die erwarteten Ergebnisse tabel
     \end{itemize}
 \end{itemize}
 
-\subsubsection*{TestProtokoll}
+\subsubsection*{Testprotokoll}
 Im \textbf{Tesprotokoll} wird der \textbf{Testfortschritt} protokolliert - da der Ablauf bereits im \textbf{Testfall} beschrieben ist, kann das Protokoll kurz gefasst sein, wie im Folgenden Beispiel:
 
 \subsubsection*{Testprotokoll für Testfall MAR1-01: Kundenliste erzeugen für PLZ - Gutfall}
