--- a/docs/repetitorium/part four/Manuelle Verfahren/einleitung.tex
+++ b/docs/repetitorium/part four/Manuelle Verfahren/einleitung.tex
@@ -1,7 +1,7 @@
 \section{Einleitung}
 
 Viele Produkte der Softwareentwicklung (\textit{Artefakte}) sind nicht testbar, dazu gehören bspw. Dokumente, die Anwendungsfälle beschreiben, das DataDictionary\footnote{
-hält fest, in welchem Format welche Daten verarbeitet werden; s. Abschnitt~\ref{fig:sec:datadictionary-und-mengengerust}
+hält fest, in welchem Format welche Daten verarbeitet werden; s. Abschnitt~\ref{sec:datadictionary-und-mengengerust}
 } aber auch Klassendiagramme aus Analyse und Entwurf.\\
 Wenn sich die Qualität von Artefakten nicht oder nicht ausschließlich durch Testen sicherstellen lässt, kommen \textbf{manuelle Verfahren} zum Einsatz: Mitarbeiter untersuchen den \textbf{Prüfgegenstand} durch \textbf{systematisches Korrekturlesen}.\\
 
@@ -40,7 +40,7 @@ The most pernicious and subtle bugs are system bugs arising from mismatched assu
 Weiter stellt er fest,  dass ``bei einer Inspektion ca. 60{\%} aller Defekte gefunden werden`` (~\cite[16]{Wed09c}).\\
 
 \begin{tcolorbox}
-Prinzipiell sollten alle Dokumente und Modelle mit manuellen Verfahren geprüft werden, da diese Verfahren das einzig praktikable Verfahren sind (\cite[16]{Wed09c}).\\
+Prinzipiell sollten alle  \textbf{Dokumente} und \textbf{Modelle} mit manuellen Verfahren geprüft werden, da diese Verfahren das einzig praktikable Verfahren sind (\cite[16]{Wed09c}).\\
 Manuell geprüft werden sollten insb.
 
 \begin{itemize}
