--- a/docs/repetitorium/part four/Qualität/qualität.tex
+++ b/docs/repetitorium/part four/Qualität/qualität.tex
@@ -160,7 +160,7 @@ Ein Qualitäts-Szenario für das o.a. Beispiel sieht demnach wie folgt aus:
 \subsection*{Priorisierung}
 Unterschiedliche Qualitätsforderungen können sich manchmal in der Praxis widersprechen. Ein \textit{autocomplete}-Feld soll bspw. für die Benutzerfreundlichkeit implementiert werden, was aber zu Lasten eines niedrigen Verbrauchsverhaltens und niedriger Antwortzeiten führen kann.\\
 Es muss also zwischen den verschiedenen Qualitätsforderungen abgewogen werden, da unterschiedliche Qualitätsforderungen auch unterschiedliche Auswirkungen auf den Erfolg haben können.\\
-Deshalb sollten Quualitätsforderungen \textbf{priorisiert} werden
+Deshalb sollten Qualitätsforderungen \textbf{priorisiert} werden
 
 \subsection*{Notwendig, aber nicht hinreichend für den Erfolg}
 Unter Berücksichtigung der aufgeführten Punkte können alle Beteiligte hinsichtlich der Qualitätsforderungen ein gemeinsames Verständnis erlangen.
