docs: update formatting of docs

--- a/docs/repetitorium/part four/Werkzeuggestützte Analyse/code-metriken.tex
+++ b/docs/repetitorium/part four/Werkzeuggestützte Analyse/code-metriken.tex
@@ -68,9 +68,9 @@ McCabe verwendet in seinem Paper $10$ als ``a reasonable, but not magical,  uppe
 
 
 \subsection*{Komplexität}
-Ein weiteres Maß für die Komplexität einer Methode ist die Anzahl der Anweisungen.
+Ein weiteres Maß für die \textbf{Komplexität einer Methode} ist die \textbf{Anzahl der Anweisungen}\footnote{auch: Anzahl der Zeilen. Eine Anweisung kann über mehrere Zeilen gehen.}.
 Lange Methoden sind sicherlich schwieriger zu verstehen, weshalb auch hier weniger Anweisungen besser sind.\\
-Die Komplexität einer \textbf{Klasse} kann mit Hilfe der \textbf{Weighted Mean Complexity} (\textit{WMC}) gemessen werden, für deren Bestimmung die zyklomatische Zahlen \textit{aller Methoden} zusammengezählt werden - auch hier ist ein geringerer Wert besser.
+Die \textbf{Komplexität einer Klasse} kann mit Hilfe der \textbf{Weighted Mean Complexity} (\textit{WMC}) gemessen werden, für deren Bestimmung die zyklomatische Zahlen \textit{aller Methoden} zusammengezählt werden - auch hier ist ein geringerer Wert besser.
 
 \subsection*{Vorgehen}
 Für den Umgang mit den berechneten Zahlenwerten gibt es zwei Strategien:
