docs: add Dynamische Tests to Glossary

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -193,6 +193,17 @@ and Abrahamsson, Pekka",
     year = 2008
 }
 
+@BOOK{Bal97,
+    title     = "Lehrbuch der {Software-Technik}, Bd. 2",
+    author    = "Balzert, Helmut",
+    publisher = "Spektrum Akademischer Verlag",
+    month     =  nov,
+    year      =  1997,
+    address   = "Heidelberg, Germany",
+    language  = "de"
+}
+
+
 @Inbook{SR94,
     author="Schader, Martin
 and Rundshagen, Michael",
