chore(docs): update some wording and references

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -558,3 +558,26 @@ and Rundshagen, Michael",
     publisher = {Addison-Wesley Longman Publishing Co., Inc.},
     address = {USA}
 }
+
+@Inbook{Lig09a,
+    author="Liggesmeyer, Peter",
+    title="Kontrollflussorientierter, strukturorientierter Test",
+    bookTitle="Software-Qualit{\"a}t: Testen, Analysieren und Verifizieren von Software",
+    year="2009",
+    publisher="Spektrum Akademischer Verlag",
+    address="Heidelberg",
+    pages="83--139",
+    abstract="In diesem Kapitel werden dynamische Testtechniken beschrieben, welche die Vollst{\"a}ndigkeit des Tests anhand der Abdeckung des Software-Quellcodes beurteilen. Daher bezeichnet man sie als strukturorientierte Testtechniken. Die beschriebenen Techniken basieren auf der Kontrollstruktur bzw. auf dem Kontrollfluss der zu testenden Software. Aus diesem Grund spricht man von kontrollflussorientierten, strukturorientierten Testtechniken. Diese Gruppe von Testtechniken besitzt eine hohe praktische Bedeutung. Das gilt insbesondere f{\"u}r ihren Einsatz im Modultest, das so genannte „Testen im Kleinen``. Die Gruppe der kontrollflussorientierten Testtechniken wird von Testwerkzeuganbietern gut unterst{\"u}tzt. Dar{\"u}ber hinaus gibt es im Bereich des kontrollflussorientierten Tests akzeptierte Minimalkriterien, die im Sinne eines ad{\"a}quaten Tests beachtet werden sollten. Ein als minimal, d. h. notwendig akzeptiertes Testverfahren ist der so genannte Zweig{\"u}berdeckungstest. In besonders kritischen Anwendungsbereichen verlangen einschl{\"a}gige Standards weitergehende Pr{\"u}fungen. Ein Standard f{\"u}r Software-Anwendungen in der Avionik fordert z. B. einen so genannten Bedingungs{\"u}berdeckungstest. Bestimmte kontrollflussorientierte Testtechniken besitzen einen derartig grundlegenden Charakter, dass eine Pr{\"u}fung als unzureichend bewertet werden muss, die auf die Anwendung dieser Techniken insbesondere im Modultest verzichtet.",
+    isbn="978-3-8274-2203-3",
+    doi="10.1007/978-3-8274-2203-3_3",
+    url="https://doi.org/10.1007/978-3-8274-2203-3_3"
+}
+
+@inproceedings{GW86,
+    title={An experimental comparison of the error exposing ability of program testing criteria},
+    author={Girgis, Moheb R and Woodward, Martin R},
+    booktitle={Proceedings of the Workshop on Software Testing},
+    pages={64--73},
+    year={1986},
+    organization={IEEE Computer Society Press}
+}
