--- a/docs/repetitorium/part four/Testende Verfahren/strukturorientierte testverfahren.tex
+++ b/docs/repetitorium/part four/Testende Verfahren/strukturorientierte testverfahren.tex
@@ -35,7 +35,7 @@ Jeder Knoten wird mit den Testdaten \code{txt="A"} mindestens einmal ausgeführt
 
 \subsubsection*{Effektivität}
 Untersuchungen, die für verschiedene fehlerhafte Methoden die Tests ausschließlich nach Überdeckungskriterien konstruiert haben, haben festgestellt, dass die Tests, die die \textbf{Anweisungsüberdeckung} erfüllen, ca. 15\% der Fehler finden\footnote{
-\textit{Wedemann} gibt hierfür - wie für alle Kennzahlen nachfolgender Überdeckungskriterien - leider keine Quelle an, vgl.~\cite[51]{Wed09c}.
+\textit{Wedemann} gibt hierfür - wie für alle Kennzahlen nachfolgender Überdeckungskriterien - leider keine Quelle an, vgl.~\cite[51]{Wed09c}. \textit{Liggesmeyer} gibt in \cite[88]{Lig09a} für die Anweisungsüberdeckung $18\%$ Fehlerentdeckungsquote an und verweist auf \textit{Girgis und Woodward} (\cite{GW86}).
 }.
 
 \subsubsection*{Werkzeugunterstützung}
