docs: update Bedingungsüberdeckung

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -541,6 +541,22 @@ and Rundshagen, Michael",
     year = 2005
 }
 
+@Inbook{Hof13,
+    author="Hoffmann, Dirk W.",
+    title="Software-Test",
+    bookTitle="Software-Qualit{\"a}t",
+    year="2013",
+    publisher="Springer Berlin Heidelberg",
+    address="Berlin, Heidelberg",
+    pages="157--246",
+    abstract="Der Software-Test ist die mit Abstand am h{\"a}ufigsten eingesetzte Technik der analytischen Qualit{\"a}tssicherung und bestimmt wie keine andere die t{\"a}gliche Arbeit eines jeden Software-Entwicklers. Im direkten Vergleich mit den anderen Methoden der Software-Qualit{\"a}tssicherung entstammt der Software-Test dabei einer erstaunlich simplen Idee: Das zu untersuchende Programm wird mit Hilfe eines Satzes konkreter Eingabedaten ausgef{\"u}hrt und das gemessene Ist-Ergebnis anschlie{\ss}end mit dem vorher ermittelten Soll-Ergebnis abgeglichen.",
+    isbn="978-3-642-35700-8",
+    doi="10.1007/978-3-642-35700-8_4",
+    url="https://doi.org/10.1007/978-3-642-35700-8_4"
+}
+
+
+
 @BOOK{Hof22,
     title     = "Theoretische Informatik",
     author    = "Hoffmann, Dirk W",
@@ -557,6 +573,17 @@ and Rundshagen, Michael",
     isbn = {0201809389},
     publisher = {Addison-Wesley Longman Publishing Co., Inc.},
     address = {USA}
+}
+
+@Book{Lig09,
+    author="Liggesmeyer, Peter",
+    title="Software-Qualit{\"a}t: Testen, Analysieren und Verifizieren von Software",
+    year="2009",
+    publisher="Spektrum Akademischer Verlag",
+    address="Heidelberg",
+    isbn="978-3-8274-2203-3",
+    doi="10.1007/978-3-8274-2203-3",
+    url="https://doi.org/10.1007/978-3-8274-2203-3"
 }
 
 @Inbook{Lig09a,
