docs: update Äquivalenzklassen Cheat Sheet

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -586,6 +586,22 @@ and Rundshagen, Michael",
     url="https://doi.org/10.1007/978-3-8274-2203-3"
 }
 
+@Inbook{Lig09b,
+    author="Liggesmeyer, Peter",
+    title="Funktionsorientierter Test",
+    bookTitle="Software-Qualit{\"a}t: Testen, Analysieren und Verifizieren von Software",
+    year="2009",
+    publisher="Spektrum Akademischer Verlag",
+    address="Heidelberg",
+    pages="49--81",
+    abstract="Im Folgenden werden dynamische Testtechniken dargestellt, welche die Vollst{\"a}ndigkeit des Tests anhand der Abdeckung einer Spezifikation mit Testf{\"a}llen beurteilen. Da Spezifikationen die Soll-Funktionalit{\"a}t einer Software festlegen, werden die Testtechniken, die gegen Spezifikationen testen, als funktionsorientierte Testtechniken bezeichnet. Funktionsorientierte Testtechniken sind unverzichtbar. Standards verlangen stets eine sorgf{\"a}ltige funktionsorientierte Testplanung. Dies ist eine direkte Forderung zur Nutzung systematischer funktionsorientierter Testtechniken. Funktionsorientiertes Testen findet in allen Testphasen statt. Im Modultest werden Modulspezifikationen als Basis f{\"u}r den Test herangezogen. Im Integrationstest bilden Schnittstellenspezifikationen die Testreferenz. Im Systemtest wird gegen Anforderungsdefinitionen getestet. Ein Test ohne systematische funktionsorientierte Testplanung ist als ungen{\"u}gend zu betrachten.",
+    isbn="978-3-8274-2203-3",
+    doi="10.1007/978-3-8274-2203-3_2",
+    url="https://doi.org/10.1007/978-3-8274-2203-3_2"
+}
+
+
+
 @Inbook{Lig09a,
     author="Liggesmeyer, Peter",
     title="Kontrollflussorientierter, strukturorientierter Test",
