chore(docs): wording and formatting updates

--- a/docs/repetitorium/part one/Prozessmodelle/agil.tex
+++ b/docs/repetitorium/part one/Prozessmodelle/agil.tex
@@ -1,7 +1,7 @@
 \subsection{Agil}
 
 \noindent
-Unter \textbf{agilem Vorgehen} werden Vorgehensweisen zusammengefaßt, die dem \textbf{Agilen Manifest}\footnote{
+Unter \textbf{agilem Vorgehen} werden Vorgehensweisen zusammengefasst, die dem \textbf{Agilen Manifest}\footnote{
     s. \url{https://agilemanifesto.org}, abgerufen 27.03.2024
 } folgen:
 
