--- a/docs/repetitorium/part one/Requirements Engineering/einfuehrung.tex
+++ b/docs/repetitorium/part one/Requirements Engineering/einfuehrung.tex
@@ -13,7 +13,7 @@ Werden die Bedürfnisse des Kunden mit der Softwarelösung nicht befriedigt, gil
 
 \noindent
 Während sich Fehler im Quellcode zumeist nur auf die \textit{Implementierung} bzw. das \textit{Testing} auswirkt, sind Fehler in den Anforderungen\footnote{
-hiermit sind nicht nur logische Fehler gemeint: \textit{Fehler} umfaßt in diesem Sinne auch das Fehlen von Informationen
+hiermit sind nicht nur logische Fehler gemeint: \textit{Fehler} umfasst in diesem Sinne auch das Fehlen von Informationen
 } weitaus teurer: Fallen sie erst in einer späten Phase auf, müssen ggf. relevante Teilsysteme neu durchdacht werden, oder es müssen ganze Phasen neu durchlaufen werden.\\
 Fehler in den Anforderungen wirken sich also i.d.R. auf alle Phasen aus, und je später sie erkannt werden, desto aufwändiger wird eine Anpassung (s. Abbildung~\ref{fig:aufwand}).
 
