--- a/docs/repetitorium/part one/Requirements Engineering/zusammenfassung.tex
+++ b/docs/repetitorium/part one/Requirements Engineering/zusammenfassung.tex
@@ -10,13 +10,13 @@
     \item Diese Anforderungen werden grob unterteilt in \textbf{funktionale} und \textbf{nicht-funktionale} Anforderungen.
     \item funktionale Anforderungen sind hierbei die Funktionen, die der Endanwender von dem System erwartet.
         \begin{itemize}
-            \item funktionale Anforderungen werden als \textbf{Use Case} oder \textbf{User Story} erfaßt.
+            \item funktionale Anforderungen werden als \textbf{Use Case} oder \textbf{User Story} erfasst.
             \item Anwendungsfälle (Use Cases) können hierbei sehr detailliert und formell beschrieben werden.
             \item User Stories sind i.d.R. wenig detailliert und beschreiben nur kurz den Umgang des Endanwenders mit dem System.
             \item für die Planung von Steueranwendungen (Hardware) können auch \textbf{Ereignistabellen} verwendet werden.
         \end{itemize}
     \item nicht-funktionale Anforderungen sind technische und organisatorische Anforderungen, die üblicherweise in Form von Listen gesammelt werden
-    \item \textbf{Regeln}, und \textbf{Formate von Daten} werden gesondert erfaßt, als \textbf{Business Rules} in Listen bzw. in \textbf{Datadictionaries} und der Angabe von \textbf{Mengengerüste}.
+    \item \textbf{Regeln}, und \textbf{Formate von Daten} werden gesondert erfasst, als \textbf{Business Rules} in Listen bzw. in \textbf{Datadictionaries} und der Angabe von \textbf{Mengengerüste}.
     \item Die Aufstellung all dieser Anforderung wird bei dem \textbf{Wasserfallmodell} oft in Form des \textbf{Pflichtenhefts} realisiert.
 \end{itemize}
 
