--- a/docs/repetitorium/part two/Architektur/architekturmuster.tex
+++ b/docs/repetitorium/part two/Architektur/architekturmuster.tex
@@ -4,6 +4,7 @@
     s. Abschnitt~\ref{sec:analysemuster}
 } \textbf{Lösungsskizzen} verallgemeinerter Architekturprobleme.
 
+\noindent
 Im Folgenden werden zwei Muster vorgestellt.
 
 \subsection{Client-Server}
