docs: fix wording and update structure

--- a/docs/repetitorium/part one/Software und Software Engineering/zusammenfassung.tex
+++ b/docs/repetitorium/part one/Software und Software Engineering/zusammenfassung.tex
@@ -13,5 +13,5 @@
               \item \textbf{Teamgröße}
               \item \textbf{Art des Produkts} (Individualsoftware, Standardsoftware)
         \end{itemize}
-    \item ein wesentlicher Aspekt des SE ist die Berücksichtigung menschlicher Bedürfnisse der von der SD betroffenen Menschen (Kunden, Entwickler, Management, Benutzer\ldots) sowie der Organisation der Zusammenarbeit der Menschen
+    \item ein wesentlicher Aspekt des Software Engineerings ist die Berücksichtigung menschlicher Bedürfnisse der von der Software Entwicklung betroffenen Menschen (Kunden, Entwickler, Management, Benutzer\ldots) sowie der Organisation der Zusammenarbeit der Menschen
 \end{itemize}
