--- a/docs/repetitorium/part three/Anwendungsfalldiagramm/begriffe und elemente.tex
+++ b/docs/repetitorium/part three/Anwendungsfalldiagramm/begriffe und elemente.tex
@@ -33,6 +33,18 @@ Anwendungsfälle beschreiben das Szenario der Nutzung, und sind deshalb \textit{
 In Anwendungsfalldiagrammen \textit{müssen} die Systemgrenzen modelliert werden (vgl.~\cite[52]{Buh09}).\\
 Systeme realisieren das Verhalten von Anwendungsfällen, bei denen sich Akteure immer außerhalb des Systems befinden: Entsprechende Systemgrenzen werden als Kasten dargestellt, in dem sich  die Anwendungsfälle befinden.
 
+\vspace{5mm}
+\begin{tcolorbox}[title=Systemgrenzen,colback=red!20]
+    Die absolute Aussage, dass die Systemgrenzen modelliert werden \textit{müssen}, ist so in der Spezifikation nicht zu finden:
+
+    \blockquote[{\cite[18.1.4 Notation, 641, HErvorhebung i.O.]{OMG17}}]{
+        A subject for a set of UseCases (sometimes called a \textit{system boundary}) may be shown as a rectangle with its name in the
+        top-left corner, with the UseCase ellipses visually located inside this rectangle
+    }
+\end{tcolorbox}
+
+\vspace{5mm}
+
 \subsection{Generalisierungsbeziehungen}
 Zwischen Akteuren und Anwendungsfällen können \textbf{Generalisierungsbeziehungen} modelliert werden (vgl. im Folgenden~\cite[66]{Bal05}):
 
