--- a/docs/repetitorium/part three/Anwendungsfalldiagramm/einsatzbereich.tex
+++ b/docs/repetitorium/part three/Anwendungsfalldiagramm/einsatzbereich.tex
@@ -15,7 +15,7 @@ Sie ist das am häufigsten eingesetzte Mittel zur Aufnahme und Darstellung von A
 Der größere Informationsgehalt liegt bei den textlichen Beschreibungen der Anwendungsfälle.\\
 
 \noindent
-Anwendungsfalldiagramme beschreiben selbst kein Verhalten und keine Abläufe, sondern zeigen nur die Zusammenhänge der an Anwendungsfällen beteiligten Modellelemente und sind somit ein Hilfsmittel zur Anforderungsermittlung und Verwaltung (vgl. \cite[213]{Oes05}).
+Anwendungsfalldiagramme beschreiben selbst kein Verhalten und keine Abläufe, sondern zeigen nur die Zusammenhänge der an Anwendungsfällen beteiligten Modellelemente und sind somit ein Hilfsmittel zur Anforderungsermittlung und Anforderungsverwaltung (vgl. \cite[213]{Oes05}).
 \end{tcolorbox}
 \vspace{2mm}
 
