--- a/docs/repetitorium/part three/Einführung/einsatzziele von uml 2.0 modellen in der softwareentwicklung.tex
+++ b/docs/repetitorium/part three/Einführung/einsatzziele von uml 2.0 modellen in der softwareentwicklung.tex
@@ -18,7 +18,7 @@ Die Diagramme enthalten nur wenige (technische) Details - nur die, die für die 
 
 \subsection*{Blueprints}
 \textbf{Blueprints} enthalten eine möglichst genaue Spezifikation eines (Sub-)Systems: Es müssen so viele Details auf den Diagrammen untergebracht werden, dass eine Implementierung zweifelsfrei vorgenommen werden kann.\\
-\textbf{Blueprints} enthalten i.d.R. mehrere Diagrammtypen, um möglichst viele Apsekte der Implementierung zu beleuchten.
+\textbf{Blueprints} enthalten i.d.R. mehrere Diagrammtypen, um möglichst viele Aspekte der Implementierung zu beleuchten.
 
 \subsection*{Grundlage für die Codegenerierung}
 \textit{Codegeneratoren} können Quellcode auf Basis von UML Modellen generieren.\\
