--- a/docs/repetitorium/part three/Sequenzdiagramme/begriffe und elemente.tex
+++ b/docs/repetitorium/part three/Sequenzdiagramme/begriffe und elemente.tex
@@ -107,7 +107,7 @@ Folgende Bezeichner können für den Operator angegeben werden (vgl.~\cite[583]{
     \item \code{alt} - es können mehrere alternative Abläufe definiert werden
     \item \code{loop} - mehrere Ausführungen, die von einer Bedingung gesteuert werden
     \item \code{opt} - Ausführung, wenn eine geg. Bedingung zutrifft
-    \item \code{par} - Ffragment läuft parallel
+    \item \code{par} - Fragment läuft parallel
 \end{itemize}
 
 \begin{figure}
