--- a/docs/repetitorium/part three/Einführung/sprachaufbau der uml 2.0.tex
+++ b/docs/repetitorium/part three/Einführung/sprachaufbau der uml 2.0.tex
@@ -14,10 +14,10 @@ Die Spezifikation von UML (\cite{OMG17}) durch die \textbf{OMG} (\textit{Object 
     \item \textbf{UML 2.0 Infrastructure}: Definiert grundlegende Modellierungskonzepte als Basis für die Entwicklung von UML 2.0
     \item \textbf{UML 2.0 Object Constraint Language}\footnote{
     \textit{OCL}, \url{https://www.omg.org/spec/OCL/}, abgerufen 29.04.2024
-    }: Definiert eine formale Sprache zur Formulierung von \textit{Einschränkungen} (Vor-/nachbedingungen für Operationen, Wertebereiche von Datentypen, Definition von Modellierungskonzepten im UML Metamodell, \ldots)
+    }: Definiert eine formale Sprache zur Formulierung von \textit{Einschränkungen} (Vor-/Nachbedingungen für Operationen, Wertebereiche von Datentypen, Definition von Modellierungskonzepten im UML Metamodell, \ldots)
     \item \textbf{UML 2.0 Diagram Interchange} (\textit{XMI}\footnote{
     \textit{XML Metadata Interchange}: \url{https://www.omg.org/spec/XMI}, abgerufen 30.04.2024
-    }): Definiert ein Austauschformat auf Basis von XML, bspw. für Import-/Export von MOdellen in unterschiedlichen Tools
+    }): Definiert ein Austauschformat auf Basis von XML, bspw. für Import-/Export von Modellen in unterschiedlichen Tools
 \end{itemize}
 
 
