--- a/docs/repetitorium/part two/Objektorientierte Analyse/beziehungen von klassen.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/beziehungen von klassen.tex
@@ -35,3 +35,13 @@ Als Konsequenz folgt, dass immer dann, wenn ein bestimmter Typ gefordert wird, a
 }\footnote{
     s.a. ``Wikipedia - Covariance and Contravariance``: \url{https://en.wikipedia.org/wiki/Covariance_and_contravariance_(computer_science)}, , abgerufen 11.04.2024
 } ist.\\
+
+
+\begin{tcolorbox}[title=Polymorphie-Prinzip]
+    \blockquote[{\cite[67]{Oes05}}]{
+    Polymorphie heißt, dass eine Operation sich (in unterschiedlichen Klassen) unterschiedliche verhalten kann. Es gibt zwei Arten der Polymorphie: statische Polymorphie (Überladung) und dynamische Polymorphie.
+    }\\
+    \noindent
+    Dynamische Polymorphie wird durch \textit{late binding} realisiert und bedeutet, dass die Zuordnung von Methodenaufrufen zur Laufzeit geschieht: Die aufzurufende Methode wird einer konkreten Instanz einer Klasse zugeordnet,
+    die eine überschriebene Methode beinhalten kann, die sich von dem Verhalten der Methode der Elternklasse unterscheiden kann.
+\end{tcolorbox}
