docs: update wording

--- a/docs/repetitorium/part one/Prozessmodelle/nebenlaeufig.tex
+++ b/docs/repetitorium/part one/Prozessmodelle/nebenlaeufig.tex
@@ -1,7 +1,7 @@
 \subsection{Nebenläufig}
 
 \noindent
-Bei \textbf{nebenläufiger Entwicklung} werden am Anfang eines \textbf{Inkrements} oder einer \textbf{Iteration} einzelne Aufgaben identifiziert, wobei für einzelne Aufgaben i.d.R. die Phasen\textit{Anforderung}, \textit{Analyse},  \textit{Entwurf}, \textit{Realisierung} sowie \textit{Tests} durchlaufen werden muss.\\
+Bei \textbf{nebenläufiger Entwicklung} werden am Anfang eines \textbf{Inkrements} oder einer \textbf{Iteration} einzelne Aufgaben identifiziert, wobei für einzelne Aufgaben i.d.R. die Phasen \textit{Anforderung}, \textit{Analyse},  \textit{Entwurf}, \textit{Realisierung} sowie \textit{Tests} durchlaufen werden muss.\\
 Die Aufgaben können
 \begin{itemize}
     \item nach dem Wasserfallmodell oder iterativ bearbeitet werden
@@ -33,6 +33,6 @@ Nebenläufige Entwicklung wird meist \textit{nicht} isoliert eingesetzt, sondern
     \item Management der parallelen Bearbeitung ist aufwändig, da pro Aufgabe i.d.R. mehrere Mitarbeiter beteiligt sind.
     \item Nebenläufige Entwicklung kann Kommunikation mit dem Kunden und Vertragsgestaltung erschweren.
     \item Abhängigkeit von verschiedenen Aufgaben kann problematisch werden (redundante oder unterschiedliche Implementierung derselben oder ähnlicher Anforderungen\footnote{
-    s. hierzu auch den Abschnitt ``Conformist`` bei \textit{Evans} (\cite[361]{Eva03})
+    s. hierzu auch den Abschnitt ``Conformist`` bei \textit{Evans} (\cite[361]{Eva03}), wo beschrieben wird, wie sich ein Downstream-Team an die Gegebenheiten anpasst, die durch ein Upstream-Team vorgegeben sind, auch wenn eine idividuelle Lösung erstrebenswerter wäre.
     }).
 \end{itemize}
