--- a/docs/repetitorium/part one/Software und Software Engineering/ingenieurmaessiges vorgehen.tex
+++ b/docs/repetitorium/part one/Software und Software Engineering/ingenieurmaessiges vorgehen.tex
@@ -50,7 +50,7 @@ Auf nicht benötigte Qualitätsziele sollte deshalb verzichtet werden.\\
 
 \subsection*{Strategien}
 Bei der Bearbeitung einer Aufgabe sollte man die Probleme und ihre Wichtigkeit verstehen: Kosten und Nutzen der Vorgehensweise und Technologie sollten immer kritisch hinterfragt werden\footnote{
-    was auch während der Entwicklung bzw. bei der Wartung eines Systems zutrifft, wo bei den Defects / Anforderungen zwischen \textit{Severity} und \textit{Priority} unterschieden wird: \textit{Severity} bezeichnet hier den Grad der Auswirkung, den ein Defect / ein fehlendes Feature auf den operativen Zustand des Systems hat, \textit{Priority} die Priorität, mit der ein fehlendes Feature implementiert bzw. ein Defect behoben werden soll, meist aus der Perspektive der \textit{Geschäftlichkeit}. So kann ein Defect mit einer hohen Severity eine niedrige Priorität zugewiesen bekommen, wenn der Defect zwar das komplette System zum Absturz bringt, dies aber nur äußerst selten aufgrund bestimmter Randbedingungen auftritt, die nur durch einen vernachlässigbaren geringen Anteil von Endanwendern betrifft.
+    was auch während der Entwicklung bzw. bei der Wartung eines Systems zutrifft, wo bei den Defects / Anforderungen zwischen \textit{Severity} und \textit{Priority} unterschieden wird: \textit{Severity} bezeichnet hier den Grad der Auswirkung, den ein Defect / ein fehlendes Feature auf den operativen Zustand des Systems hat, \textit{Priority} die Priorität, mit der ein fehlendes Feature implementiert bzw. ein Defect behoben werden soll, meist aus der Perspektive der \textit{Geschäftlichkeit}. So kann ein Defect mit einer hohen Severity eine niedrige Priorität zugewiesen bekommen, wenn der Defect zwar das komplette System zum Absturz bringt, dies aber nur äußerst selten aufgrund bestimmter Randbedingungen auftritt, die nur einen vernachlässigbaren geringen Anteil von Endanwendern betrifft.
 }.
 
 \subsection*{Machbarkeit}
