chore(docs): add isbn for Hof22 bib ref

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -563,6 +563,7 @@ and Rundshagen, Michael",
     publisher = "Carl Hanser Verlag GmbH \& Co. KG",
     month     =  apr,
     year      =  2022,
+    isbn = {978-3-446-47029-3},
     address   = "M{\"u}nchen"
 }
 
