docs: update wording and formatting

--- a/docs/repetitorium/part four/Manuelle Verfahren/überblick über die verfahren.tex
+++ b/docs/repetitorium/part four/Manuelle Verfahren/überblick über die verfahren.tex
@@ -20,6 +20,6 @@ ergänzend führt \textit{Wedemann} als besonderes Verfahren \textbf{Pair Progra
 
 \begin{itemize}
     \item \textbf{Inspektionen} sind \textbf{hoch formalisiert} und müssen von allen Beteiligten vorbereitet werden.
-    \item Bei \textbf{Reviews} wird auf einen Teil der Formalisierung bei Vorbereitung und Durchführung verzichtet.\\
+    \item Bei \textbf{Reviews} wird auf einen Teil der Formalisierung bei Vorbereitung und Durchführung verzichtet.
     \item In einem \textbf{Walkthrough} wird ein Artefakt von seinem Autor einer Gruppe von Mitarbeitern informell vorgestellt.
 \end{itemize}
