--- a/docs/repetitorium/part four/Werkzeuggestützte Analyse/code-metriken.tex
+++ b/docs/repetitorium/part four/Werkzeuggestützte Analyse/code-metriken.tex
@@ -12,7 +12,7 @@ Im Folgenden werden die laut \textit{Wedemann} wichtigsten Code-Metriken zur Ana
 \end{figure}
 
 \begin{tcolorbox}[colback=white]
-    \textbf{Wartbarkeit} von Code ist immer auch abhängig von den Qualitätsteilmerkmalen \textbf{Strukturiertheit} und \textbf{Verständlichkeit}, die sich mit Metriken messen lassen.\\
+    \textbf{Wartbarkeit} von Code ist immer auch abhängig von den Qualitätsteilmerkmalen \textbf{Strukturiertheit} und \textbf{Verständlichkeit}, die sich mit Metriken messen lassen.
 \end{tcolorbox}
 \vspace{2mm}
 
