--- a/docs/repetitorium/part one/Requirements Engineering/anforderungen.tex
+++ b/docs/repetitorium/part one/Requirements Engineering/anforderungen.tex
@@ -22,7 +22,7 @@ Um die Anforderungen auf geeignete Weise schriftlich festzuhalten, was auch als 
 
 \subsection{Die Stimme des Kunden}
 \subsubsection*{Anforderungen werden mit dem Anwender erarbeitet}
-Oftmals sind Kunden und Endanwender nicht in der Lage, Bedürfnisse strukturiert und widerspruchsfrei zu äußern, außerdem sind Anforderungen und Lösungsvorschläge verschiedener Anwender nicht immer miteinander vereinbar oder widersprechen sich oder dem erstellen \textbf{Vision \& Scope}, u.U. liefern Anwender auch (wissentlich) Falschinformationen.\\
+Oftmals sind Kunden und Endanwender nicht in der Lage, Bedürfnisse strukturiert und widerspruchsfrei zu äußern, außerdem sind Anforderungen und Lösungsvorschläge verschiedener Anwender nicht immer miteinander vereinbar oder widersprechen sich oder dem erstellen \textbf{Vision \& Scope}, manchmal liefern Anwender auch (wissentlich) Falschinformationen.\\
 
 \noindent
 Eine unreflektierte Umsetzung der Anforderungen wäre also ein Fehler, weshalb es Aufgabe des Entwicklers ist, gemeinsam mit dem Kunden die Anforderungen zu bearbeiten.
