--- a/docs/repetitorium/part three/Anwendungsfalldiagramm/begriffe und elemente.tex
+++ b/docs/repetitorium/part three/Anwendungsfalldiagramm/begriffe und elemente.tex
@@ -103,7 +103,7 @@ Bei der Verwendung einer \code{include}-Beziehung gilt (vgl.~\cite[53]{Buh09}):
 \subsection{extend-Beziehung}
 Die Verwendung der \code{extend}-Beziehung erlaubt die Erweiterung eines Anwendungsfalles \code{A} durch einen Anwendungsfall \code{B}.\\
 \code{A} beschreibt die Basisfunktionalität, \code{B} beschreibt die Erweiterung (s. Abbildung~\ref{fig:usecase-extend}).
-Hierbei kann der \textbf{A} alleine oder zusammen mit \code{B} ausgeführt werden (im Unterschied zur \code{include}-Beziehung: Hier ist inkludieren nicht optional) (vgl.~\cite[54]{Bal05}).
+Hierbei kann der \textbf{A} alleine oder zusammen mit \code{B} ausgeführt werden (im Unterschied zur \code{include}-Beziehung: Der inkludierte Anwendungsfall wird in jedem Fall ausgeführt) (vgl.~\cite[54]{Bal05}).
 
 \noindent
 Bei der Verwendung einer \code{extend}-Beziehung gilt (vgl.~\cite[53]{Buh09}):
