--- a/docs/repetitorium/part three/Anwendungsfalldiagramm/einsatzbereich.tex
+++ b/docs/repetitorium/part three/Anwendungsfalldiagramm/einsatzbereich.tex
@@ -32,7 +32,7 @@ Die \textbf{textliche Beschreibung} eines Anwendungsfalls sollte folgende Inform
     \item Priorität des Anwendungsfalls
 \end{itemize}
 
-\begin{tcolorbox}
+\begin{tcolorbox}[title={Vorgehen bei der Anwendungsfallanalyse}]
     Zu den wichtigsten Schritten einer Anwendungsfallanalyse gehören (vgl.~\cite[Aufgabe 5.2, 88]{Buh09}):
     \begin{enumerate}
         \item Akteure identifizieren
