--- a/docs/repetitorium/part two/Objektorientierter Entwurf/entwurfsmuster.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/entwurfsmuster.tex
@@ -3,7 +3,7 @@
 \textbf{Entwurfsmuster} (\textit{Design Patterns}) sind wie Analyse- (s. Abschnitt~\ref{sec:analysemuster}) und Architekturmuster (s. Abschnitt~\ref{sec:architekturmuster}) vorgefertigte Lösungsschablonen für verallgemeinerte Probleme des Entwurfs.\\
 
 \noindent
-Entwurfsmuster müssen zur Lösung konkreter Aufgaben angepaßt werden.
+Entwurfsmuster müssen zur Lösung konkreter Aufgaben angepasst werden.
 
 \subsection{Beobachter (Observer)}
 
