--- a/docs/repetitorium/part two/Objektorientierter Entwurf/von der analyse zum entwurf.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/von der analyse zum entwurf.tex
@@ -42,6 +42,6 @@ Es bietet sich deshalb an, erst einen groben Entwurf zu skizzieren.
 Der Entwurf kann (eindeutige) Absprachen unter den Projektbeteiligten erleichtern.\\
 
 \noindent
-Größere Entwürfe bzw. sehr detaillierte sollten im ersten Anlauf vermieden werden - stattdessen sollte iterativ gearbeitet werden: Es werden erst Teile entworfen und umgesetzt, und basierend auf den gemachten Erfahrungen werden Entwürfe angepaßt.
+Größere Entwürfe bzw. sehr detaillierte sollten im ersten Anlauf vermieden werden - stattdessen sollte iterativ gearbeitet werden: Es werden erst Teile entworfen und umgesetzt, und basierend auf den gemachten Erfahrungen werden Entwürfe angepasst.
 
 
