--- a/docs/repetitorium/part four/Testende Verfahren/klassentest objektorientierter systeme.tex
+++ b/docs/repetitorium/part four/Testende Verfahren/klassentest objektorientierter systeme.tex
@@ -56,7 +56,8 @@ Insgesamt kommt \textit{Wedemann} zu dem Schluss, dass Kapselung als Vorteil ang
 \subsection*{Vererbungshierarchien}
 Bei der \textbf{Vererbung} übernehmen abgeleitete Klassen von der Oberklasse bestehende Methoden - neue Methoden können hinzugefügt und bestehende ergänzt werden.\\
 Dass neue und überschriebene Methoden getestet werden müssen, ist selbstverständlich.
-Bestehende, ererbte Methoden könnten aber überschriebene Methoden nutzen; sie müssen deshalb genauso gestestet werden, damit fehlerhaftes Verhalten entdeckt werden kann.\\
+Bestehende, in der abgeleiteten Klasse existierende Methoden könnten aber überschriebene Methoden nutzen; sie müssen deshalb genauso getestet werden, damit fehlerhaftes Verhalten entdeckt werden kann.
+Regressionstest eignen sich in diesen Fällen, um über verschiedene Versionen Stabilität zu garantieren.\\
 Im Folgenden nutzt \code{Bar} die geerbte Methode \code{z()} um die Summe von $1$ und $3$ zu berechnen.
 Ändert sich das Verhalten von \code{z()} und/oder \code{x()}in der Oberklasse, kann das unerwartete Auswirkungen auf Objekte der Klasse \code{Bar} haben, weshalb auch \code{z()} für  Instanzen von \code{Bar} getestet werden sollte (vgl. ``\textit{naughty children}``,~\cite[Table 17.2, 843]{Bin99}).
 
