--- a/docs/repetitorium/part four/Werkzeuggestützte Analyse/programmierrichtlinien.tex
+++ b/docs/repetitorium/part four/Werkzeuggestützte Analyse/programmierrichtlinien.tex
@@ -29,8 +29,8 @@ Es ist denkbar, in solchen Fällen die Programmierrichtlinien nur für \textit{n
 \subsection*{Vorgehen}
 \begin{itemize}
     \item Werkzeuge sollten von Anfang an benutzt werden, da ein nachträglicher Einsatz mit hohem Aufwand verbunden ist
-    \item die Einführung sollte zunächst an einem kleinen Stück Software erprobt werden, die Einstellungen der IDE werden dann anhand des Beispiels angepaßt, Regeln ggf. modifiziert
-    \item während des ersten Gebrauchs sollten die Regeln systematisch auf die Brauchbarkeit überprüft und Werkzeug und IDE  angepaßt werden, bis ein akzeptabler Stand erreicht ist
+    \item die Einführung sollte zunächst an einem kleinen Stück Software erprobt werden, die Einstellungen der IDE werden dann anhand des Beispiels angepasst, Regeln ggf. modifiziert
+    \item während des ersten Gebrauchs sollten die Regeln systematisch auf die Brauchbarkeit überprüft und Werkzeug und IDE  angepasst werden, bis ein akzeptabler Stand erreicht ist
     \item die Projektleitung sollte darauf achten, dass alle Entwickler den Quellcode gleich prüfen - das Werkzeug sollte also in die IDE integriert sein, zumindest aber in das Build-Management, damit die Prüfung automatisch und periodisch durchgeführt wird
 \end{itemize}
 
