--- a/docs/repetitorium/part two/Objektorientierter Entwurf/verbesserung des entwurfs durch refactoring.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/verbesserung des entwurfs durch refactoring.tex
@@ -1,13 +1,13 @@
 \section{Verbesserung des Entwurfs durch Refactoring}
 Nur selten kann ein neues System von Anfang an so entworfen werden, dass der Entwurf für das gesamte System  durchgängig geeignet und zweckmäßig ist.
 Wie in Abschnitt~\ref{sec:vorgehen-beim-entwerfen} diskutiert ist es i.d.R. notwendig, \textbf{iterativ} vorzugehen.
-Der Entwurf wird so immer wieder angepaßt.\\
+Der Entwurf wird so immer wieder angepasst.\\
 Somit können Schwächen früherer Entwürfe entdeckt und entfernt werden.\\
 Sollten sich ansonsten kleine und große Fehler im Entwurf anhäufen, können die dadurch entstehenden starken Kopplungen den Code wenig erweiter- und wartbar machen.\\
 
 \noindent
 Es ist allerdings nicht einfach, bereits kleine Mengen existierenden Codes zu ändern.\\
-Mittel und Wege, den Entwurf bestehender Software zu verbessern, ohne dabei die Funktionalität zu ändern, werden von \textit{Fowler} in \cite{Fow99} gezeigt: \textbf{Refactoring}.
+Mittel und Wege, den Entwurf bestehender Software zu verbessern, ohne dabei die Funktionalität zu ändern, werden von \textit{Fowler} in~\cite{Fow99} gezeigt: \textbf{Refactoring}.
 
 \subsubsection*{Vorgehen}
 Refactoring besteht aus mehreren Schritten:
